2008-11-24  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.MapToKml/Main.cs: support transform

2008-11-24  Scott Ellington  <scott.ellington@gmail.com>

	



2008-11-22  Scott Ellington  <scott.ellington@gmail.com>

	



2008-11-21  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/Main.cs: add world extents

2008-11-18  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/Cumberland.TilePyramidGenerator.csproj,
	  Cumberland.TilePyramidGenerator/Main.cs: support tms/openLayers

2008-11-13  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer/Cumberland.Data.SqlServer.csproj: wrong
	  assembly name

2008-11-13  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer.Loader/Main.cs: set default srid to 0

2008-11-12  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs,
	  Cumberland.Data.SqlServer.Loader/Main.cs: rename WellKnownText to
	  SimpleFeatureAccess

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* docs/1.0/Cumberland/Cumberland/PointSymbolShapeType.xml: switch to
	  TileConsumer.GoogleMaps

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer.Loader/Main.cs: bool field is binary

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer.Loader/Main.cs: allow null values in dbf

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/AssemblyInfo.cs,
	  Cumberland.DrawMap/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
	  Cumberland.Data.PostGIS/AssemblyInfo.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs,
	  Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: cleanup
