@@ -1,3 +1,7 @@
+2008-12-04  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Web/TileProvider.cs: add virtualearth support
+
 2008-12-02  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Point.cs:
